# chip8

./: .gitignore  Cargo.toml  README.md
scripts/: trace.sh
src/: main.rs
src/arch/: cpu.rs  interconnect.rs  mod.rs
src/chip8/: chip8.rs  display.rs  interconnect.rs  mod.rs
src/chip8/arch/: cpu.rs
src/chip8vm/: main.rs
src/chip8vm/chip8/: chip8.rs  display.rs  interconnect.rs  keypad.rs  mem_map.rs  mod.rs  remote_dbg.rs
src/chip8vm/chip8/arch/: cpu.rs
src/debugger/: cli.rs  commands.rs  disasm.rs  gui.rs  main.rs
