[package]
name = "chip8"
version = "0.1.0"
authors = ["mstelmas"]

[dependencies]
log = "0.4"
env_logger = "0.5.10"
sdl2 = "0.31.0"
rand = "0.3.15"
conrod = { version = "0.61.1", features = ["piston", "glium", "winit"] }
bincode = "1.0.1"
serde_derive = "1.0.70"
serde_json = "1.0"
serde = "1.0.70"
nom = "^1.2.3"

[[bin]]
name = "debugger"
path = "src/debugger/main.rs"

[[bin]]
name = "chip8"
path = "src/chip8vm/main.rs"
